Integrate Google AdSense into index.html
Added Google AdSense script for monetization.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- Google AdSense -->
+  <script async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2558451678837926"
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Loading Animation -->
@@ -205,3 +209,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
